--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./img/logo.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+            Rick & Morty
+          </a>
+          <button class="btn btn-outline-success me-2" type="button">Historial</button>
+        </div>
+      </nav>
+    
+
+
     
 </body>
 </html>
