feat add cards with personajes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <button class="btn btn-outline-success me-2" type="button">Historial</button>
         </div>
       </nav>
+      <div id="container" class="row row-cols-1 row-cols-md-3 g-4">
+      </div>
     
 
 
