feat restructuring to html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+    <header>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -19,9 +20,12 @@
           </a>
           <button class="btn btn-outline-success me-2" type="button">Historial</button>
         </div>
-      </nav>
-      <div id="container" class="row row-cols-1 row-cols-md-3 g-4">
-      </div>
+    </nav>
+    </header>
+     
+    <main>
+    <div id="container" class="row row-cols-1 row-cols-md-3 g-4"></div>
+    </main>
     
 
 
