--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
     </header>
      
     <main>
+        <!--Modal-->
+        <div class="modal fade" id="personajeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header text-secondary">
+                  <h5 class="modal-title  text-secondary" id="exampleModalLabel"></h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <!-- Contenido de la ventana modal, aquí  mostramos mas info de los personajes -->
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
     <div id="container" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
     </div>
     </main>
