--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-custom bg-dark-subtle">
 
     <header>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="./img/logo.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+          <a class="navbar-brand fs-2" href="#">
+            <img src="./img/logo.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center ">
             Rick & Morty
           </a>
           <button class="btn btn-outline-success me-2" type="button">Historial</button>
@@ -31,9 +31,9 @@
         <!--Modal-->
         <div class="modal fade" id="personajeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header text-secondary">
-                  <h5 class="modal-title  text-secondary" id="exampleModalLabel"></h5>
+              <div class="modal-content border border-success">
+                <div class="modal-header text-success">
+                  <h5 class="modal-title  text-success" id="exampleModalLabel"></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
