feat add content to historial.html

--- a/html/historial.html
+++ b/html/historial.html
@@ -14,7 +14,21 @@
      <!--css-->
      <link rel="stylesheet" href="../style.css">
 </head>
-<body  class="font-custom">
+<body  class="font-custom bg-dark-subtle">
+
+    <header>
+        <nav class="navbar bg-dark-subtle border-bottom border-success ">
+            <div class="container-fluid">
+              <a class="navbar-brand fs-2" href="#">
+                <img src="../img/logo.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center ">
+                Historial
+              </a>
+              <button class="btn btn-outline-success me-2" type="button" onclick="redirectToMain()">Volver</button>
     
+            </div>
+        </nav>
+        </header>
+    
+    <script src="../historial.js"></script>
 </body>
 </html>
