--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body class="font-custom bg-dark-subtle">
 
     <header>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="#">
+    <nav class="navbar bg-dark-subtle border-bottom border-success ">
+        <div class="container-fluid ">
+          <a class="navbar-brand fs-2 " href="#">
             <img src="./img/logo.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center ">
             Rick & Morty
           </a>
-          <button class="btn btn-outline-success me-2" type="button">Historial</button>
+          <button class="btn btn-outline-success me-2" type="button" onclick="redirectToHistorial()">Historial</button>
+
         </div>
     </nav>
     </header>
