feat add historial with localStorage

--- a/html/historial.html
+++ b/html/historial.html
@@ -28,6 +28,11 @@
             </div>
         </nav>
         </header>
+
+        <main>
+            <div id="historial-container" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+            </div>
+        </main>
     
     <script src="../historial.js"></script>
 </body>
