--- a/html/historial.html
+++ b/html/historial.html
@@ -14,7 +14,7 @@
      <!--css-->
      <link rel="stylesheet" href="../style.css">
 </head>
-<body  class="font-custom bg-dark-subtle">
+<body  class="font-custom">
 
     <header>
         <nav class="navbar bg-dark-subtle border-bottom border-success ">
